Update URLs to use www.cdexterior.com.co as primary domain

--- a/.env.production
+++ b/.env.production
@@ -10,4 +10,4 @@ VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 VITE_GOOGLE_ADS_CONVERSION_ID=AW-XXXXXXXXX
 
 # Site Configuration
-VITE_SITE_URL=https://cdexterior.com.co
+VITE_SITE_URL=https://www.cdexterior.com.co
